tests/ui/lifetime-span.stderr
error[E0726]: implicit elided lifetime not allowed here
  --> tests/ui/lifetime-span.rs:12:6
   |
12 | impl Trait for A {
   |      ^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
12 | impl Trait<'_> for A {
   |           ++++

error[E0107]: trait takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> tests/ui/lifetime-span.rs:32:10
   |
32 | impl<'r> Trait2<'r> for B {
   |          ^^^^^^---- help: remove the unnecessary generics
   |          |
   |          expected 0 lifetime arguments
   |
note: trait defined here, with 0 lifetime parameters
  --> tests/ui/lifetime-span.rs:22:11
   |
22 | pub trait Trait2 {
   |           ^^^^^^

error[E0195]: lifetime parameters do not match the trait definition
  --> tests/ui/lifetime-span.rs:28:21
   |
28 |     async fn method(&self) {}
   |                     ^
   |
   = note: lifetime parameters differ in whether they are early- or late-bound
note: `'life0` differs between the trait and impl
  --> tests/ui/lifetime-span.rs:23:21
   |
22 | pub trait Trait2 {
   | ---------------- in this trait...
23 |     async fn method<'r>(&'r self);
   |                     ^^
   |                     |
   |                     `'r` is early-bound
   |                     this lifetime bound makes `'r` early-bound
...
27 | impl Trait2 for A {
   | ----------------- in this impl...
28 |     async fn method(&self) {}
   |                     ^ `'life0` is late-bound
note: `'life0` differs between the trait and impl
  --> tests/ui/lifetime-span.rs:21:1
   |
21 | #[async_trait]
   | ^^^^^^^^^^^^^^ `'async_trait` is early-bound
22 | pub trait Trait2 {
   | ---------------- in this trait...
23 |     async fn method<'r>(&'r self);
   |                     -- this lifetime bound makes `'async_trait` early-bound
...
27 | impl Trait2 for A {
   | ----------------- in this impl...
28 |     async fn method(&self) {}
   |                     ^ `'life0` is late-bound
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0195]: lifetime parameters or bounds on method `method` do not match the trait declaration
  --> tests/ui/lifetime-span.rs:33:14
   |
23 |     async fn method<'r>(&'r self);
   |                    ---- lifetimes in impl do not match this method in trait
...
33 |     async fn method(&'r self) {}
   |              ^^^^^^^^^^^^^^^^ lifetimes do not match method in trait
